--- a/google-analytics.html
+++ b/google-analytics.html
@@ -12,18 +12,18 @@ gtag('consent', 'default', {
 </script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src='https://www.googletagmanager.com/gtag/js?id=G-XXXX'></script>
+  <script async src='https://www.googletagmanager.com/gtag/js?id=G-012245trjh'></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
 
     gtag('js', new Date());
 
-/*
-The tracking number below MUST be replaced with a unique number, contact the statistics development team to set this up.
-*/
-  gtag('config', 'G-XXXX');
+  gtag('config', 'G-012245trjh');
 
+/*
+The custom trackers below can be tailored to match the inputs used in your dashboard.
+*/
 
   $(document).on('change', 'select#selectPhase', function(e) {
     gtag('event', 'select phase', {'event_category' : 'choose Phase',
